--- a/HexagonHeroes.Server/HexagonHeroes.Server.csproj
+++ b/HexagonHeroes.Server/HexagonHeroes.Server.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HexagonHeroes.Logic\HexagonHeroes.Logic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Lidgren.Network">
       <HintPath>..\..\lidgren-network-gen3\Lidgren.Network\bin\Debug\Lidgren.Network.dll</HintPath>
     </Reference>
