--- a/HexagonHeroes.Client/HexagonHeroes.Client.csproj
+++ b/HexagonHeroes.Client/HexagonHeroes.Client.csproj
@@ -21,11 +21,11 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Lidgren.Network">
-      <HintPath>..\..\lidgren-network-gen3\Lidgren.Network\bin\Debug\Lidgren.Network.dll</HintPath>
-    </Reference>
+    <Folder Include="States\Menu\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="States\Menu\" />
+    <Reference Include="Lidgren.Network">
+      <HintPath>..\Lidgren.Network.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
