--- a/HexagonHeroes.Server/HexagonHeroes.Server.csproj
+++ b/HexagonHeroes.Server/HexagonHeroes.Server.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <Reference Include="Lidgren.Network">
-      <HintPath>..\..\lidgren-network-gen3\Lidgren.Network\bin\Debug\Lidgren.Network.dll</HintPath>
+      <HintPath>..\Lidgren.Network.dll</HintPath>
     </Reference>
   </ItemGroup>
 
